// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayError renders general errors 1`] = `
.c0 {
  border-left: 5px solid red;
  list-style: none;
  padding-left: 1rem;
}

<ul
  class="c0"
>
  <li>
    mock general error
  </li>
</ul>
`;

exports[`DisplayError renders generic error if no error message prop 1`] = `
.c0 {
  border-left: 5px solid red;
  list-style: none;
  padding-left: 1rem;
}

<ul
  class="c0"
>
  <li>
    Opps, something went wrong.
  </li>
</ul>
`;

exports[`DisplayError renders graphQLErrors 1`] = `
.c0 {
  border-left: 5px solid red;
  list-style: none;
  padding-left: 1rem;
}

<ul
  class="c0"
>
  <li>
    mock graphQLError
  </li>
</ul>
`;
